--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,14 @@ ul li:hover{
   border-radius: 5px;
 
 }
+
+.footer{
+  font-style: italic;
+  color: #0a0621;
+  font-weight: bold;
+  text-align:right;
+}
+
 @media only screen and (max-width: 600px) {
     #navBar {
         visibility:hidden;
